--- a/UBCollecting/app/src/main/AndroidManifest.xml
+++ b/UBCollecting/app/src/main/AndroidManifest.xml
@@ -10,13 +10,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".PersonActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FieldTripActivity" />
+        <activity android:name=".FileActivity" />
+        <activity android:name=".LanguageActivity" />
+        <activity android:name=".QuestionnaireActivity" />
+        <activity android:name=".QuestionnaireContentActivity" />
+        <activity android:name=".QuestionnaireTypeActivity" />
+        <activity android:name=".RoleActivity" />
+        <activity android:name=".SessionActivity"></activity>
     </application>
 
 </manifest>
