Implement TableViewActivity implemented to view table contents

--- a/UBCollecting/app/src/main/AndroidManifest.xml
+++ b/UBCollecting/app/src/main/AndroidManifest.xml
@@ -31,9 +31,11 @@
         <activity android:name=".TableListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TableViewActivity"></activity>
     </application>
 
 </manifest>
