--- a/UBCollecting/app/src/main/AndroidManifest.xml
+++ b/UBCollecting/app/src/main/AndroidManifest.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.buffalo.cse.ubcollecting">
-    <uses-permission android:name="android.permission.CAMERA" android:required="true"/>
+
+    <uses-permission
+        android:name="android.permission.CAMERA"
+        android:required="true" />
+
     <uses-feature
         android:name="android.hardware.camera.any"
         android:required="true" />
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -36,14 +41,17 @@
         <activity android:name=".QuestionPropertyDefActivity" />
         <activity android:name=".SessionAnswerActivity" />
         <activity android:name=".SessionPersonActivity" />
-        <activity android:name=".TableListActivity">
+        <activity android:name=".TableListActivity"/>
+        <activity android:name=".TableViewActivity"/>
+        <activity android:name=".ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TableViewActivity"></activity>
+        <activity android:name=".ui.AdminActivity" />
+        <activity android:name=".ui.UserActivity"/>
     </application>
 
 </manifest>
