--- a/UBCollecting/app/src/main/AndroidManifest.xml
+++ b/UBCollecting/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name=".SessionActivity" />
         <activity android:name=".AnswerActivity" />
         <activity android:name=".LanguageTypeActivity" />
-        <activity android:name=".QuestionActivity" />
+        <activity android:name=".ui.AddQuestionsActivity" />
         <activity android:name=".QuestionLangVersionActivity" />
         <activity android:name=".QuestionOptionActivity" />
         <activity android:name=".QuestionPropertyActivity" />
