--- a/UBCollecting/app/src/main/AndroidManifest.xml
+++ b/UBCollecting/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.CreateQuestionActivity" />
         <activity android:name=".PersonActivity" />
         <activity android:name=".FieldTripActivity" />
         <activity android:name=".FileActivity" />
