Update question activity complete and fully functional

--- a/UBCollecting/app/src/main/AndroidManifest.xml
+++ b/UBCollecting/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.CreateQuestionActivity" />
+        <activity android:name=".ui.UpdateQuestionActivity" />
         <activity android:name=".PersonActivity" />
         <activity android:name=".FieldTripActivity" />
         <activity android:name=".FileActivity" />
