--- a/UBCollecting/app/src/main/AndroidManifest.xml
+++ b/UBCollecting/app/src/main/AndroidManifest.xml
@@ -53,7 +53,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.AdminActivity" />
-        <activity android:name=".ui.UserLandingActivity"/>
+        <activity android:name=".ui.interviewer.UserLandingActivity"/>
+        <activity android:name=".ui.interviewer.UserSelectSessionActivity"/>
+        <activity android:name=".ui.interviewer.AddSessionRolesActivity"/>
+
+
     </application>
 
 </manifest>
