--- a/UBCollecting/app/src/main/AndroidManifest.xml
+++ b/UBCollecting/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+
     <application
         android:name=".app.App"
         android:allowBackup="true"
@@ -23,41 +24,42 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.CreateQuestionActivity" />
-        <activity android:name=".ui.UpdateQuestionActivity" />
-        <activity android:name=".PersonActivity" />
-        <activity android:name=".FieldTripActivity" />
-        <activity android:name=".FileActivity" />
-        <activity android:name=".LanguageActivity" />
-        <activity android:name=".QuestionnaireActivity" />
-        <activity android:name=".QuestionnaireContentActivity" />
-        <activity android:name=".QuestionnaireTypeActivity" />
-        <activity android:name=".RoleActivity" />
-        <activity android:name=".SessionActivity" />
-        <activity android:name=".AnswerActivity" />
-        <activity android:name=".LanguageTypeActivity" />
-        <activity android:name=".ui.AddQuestionsActivity" />
-        <activity android:name=".QuestionLangVersionActivity" />
-        <activity android:name=".QuestionOptionActivity" />
-        <activity android:name=".QuestionPropertyActivity" />
-        <activity android:name=".QuestionPropertyDefActivity" />
-        <activity android:name=".SessionAnswerActivity" />
-        <activity android:name=".SessionPersonActivity" />
-        <activity android:name=".TableSelectActivity"/>
-        <activity android:name=".TableViewActivity"/>
-        <activity android:name=".ui.LoginActivity">
+        <activity android:name=".ui.CreateQuestionActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.UpdateQuestionActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".PersonActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".FieldTripActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".FileActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".LanguageActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".QuestionnaireActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".QuestionnaireContentActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".QuestionnaireTypeActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".RoleActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".SessionActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".AnswerActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".LanguageTypeActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.AddQuestionsActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".QuestionLangVersionActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".QuestionOptionActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".QuestionPropertyActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".QuestionPropertyDefActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".SessionAnswerActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".SessionPersonActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".TableSelectActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".TableViewActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.LoginActivity"  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.AdminActivity" />
-        <activity android:name=".ui.interviewer.UserLandingActivity"/>
-        <activity android:name=".ui.interviewer.UserSelectSessionActivity"/>
-        <activity android:name=".ui.interviewer.AddSessionRolesActivity"/>
-        <activity android:name=".ui.interviewer.UserSelectQuestionnaireActivity"/>
-        <activity android:name=".ui.interviewer.TakeQuestionnaireActivity"/>
+        <activity android:name=".ui.AdminActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.interviewer.UserLandingActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.interviewer.UserSelectSessionActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.interviewer.AddSessionRolesActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.interviewer.UserSelectQuestionnaireActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.interviewer.TakeQuestionnaireActivity" android:screenOrientation="portrait"/>
     </application>
+
 
 </manifest>
